# libdlibxx

./: .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  PKGBUILD  README.md  dynlib.hxx  libdlibxx.install
examples/: .gitignore  CMakeLists.txt  demo.cxx  driver.cxx  plugin-a.cxx  plugin.hxx  simple-dl-demo.cxx
include/: dlibxx.hxx
lib/: CMakeLists.txt
pkg/arch/: .AURINFO  PKGBUILD
pkg/arch-linux/: PKGBUILD
src/: dlibxx.cxx
test/: CMakeLists.txt  test_library_loading.cpp  test_symbol_loading.cpp
test/mocks/: dlfcn_mock.cpp  dlfcn_mock.h
testing/: driver.cxx  plugin-b.cxx  plugin-c.cxx
